# DigiDoc4-Client

./: .gitignore  .gitmodules  .travis.yml  AppImageBuilder.yml  AppxManifest-ShellExt.xml.cmake  AppxManifest.xml.cmake  CMakeLists.txt  COPING  COPYING  Dockerfile.builder  Qt-5.9.8-OpenSSL-1.1.patch  README.md  RELEASE-NOTES.md  commands.sh  lgtm.yml  openldap.patch  prepare_osx_build_environment.sh  qdigidoc.wxs  qdigidoc4.eToken.entitlements  qdigidoc4.en-US.wxl  qdigidoc4.entitlements  qdigidoc4.et-EE.wxl  qdigidoc4.pfx  qdigidoc4.wxs  qt-macos12.patch  snapcraft.yaml  vcpkg.json
.github/workflows/: build.yml  tar.yml
client/: AccessCert.cpp  AccessCert.h  Application.cpp  Application.h  Application_mac.mm  CDoc1.cpp  CDoc1.h  CDoc2.cpp  CDoc2.h  CDocSupport.cpp  CDocSupport.h  CMakeLists.txt  CardInfo.cpp  CardInfo.h  CardInfo.ui  CertStore.cpp  CertStore.h  CheckConnection.cpp  CheckConnection.h  CliApplication.cpp  CliApplication.h  Colors.h  ContainerState.h  Crypto.cpp  Crypto.h  CryptoDoc.cpp  CryptoDoc.h  DateTime.cpp  DateTime.h  Diagnostics.cpp  Diagnostics.h  DiagnosticsTask.cpp  DiagnosticsTask.h  Diagnostics_unix.cpp  Diagnostics_win.cpp  DigiDoc.cpp  DigiDoc.h  DocumentModel.cpp  DocumentModel.h  FileDialog.cpp  (+69 more)
client/common4/: TokenData4.cpp  TokenData4.h
client/crypto/: CryptoDoc.cpp  CryptoDoc.h  LdapSearch.cpp  LdapSearch.h
client/dialogs/: AccessCert.cpp  AccessCert.h  AddRecipients.cpp  AddRecipients.h  AddRecipients.ui  CertificateDetails.cpp  CertificateDetails.h  CertificateDetails.ui  CertificateDetails_mac.mm  CertificateHistory.cpp  CertificateHistory.h  CertificateHistory.ui  EvidenceDialog.cpp  EvidenceDialog.h  EvidenceDialog.ui  FileDialog.cpp  FileDialog.h  FirstRun.cpp  FirstRun.h  FirstRun.ui  FirstRun2.cpp  FirstRun2.h  FirstRun2.ui  KeyDialog.cpp  KeyDialog.h  KeyDialog.ui  MobileDialog.cpp  MobileDialog.h  MobileDialog.ui  MobileProgress.cpp  MobileProgress.h  MobileProgress.ui  PasswordDialog.cpp  PasswordDialog.h  PasswordDialog.ui  PinPopup.cpp  PinPopup.h  PinPopup.ui  PinUnblock.cpp  PinUnblock.h  (+28 more)
client/effects/: ButtonHoverFilter.cpp  ButtonHoverFilter.h  FadeInNotification.cpp  FadeInNotification.h  HoverFilter.cpp  HoverFilter.h  Overlay.cpp  Overlay.h
client/fonts/: fonts.qrc
client/images/: digidoc_allkirjastamine.psd  digidoc_allkirjastatud_head.psd  digidoc_blank.psd  digidoc_esileht.psd  images.qrc
client/mac/: Icon.icns  Info.plist.cmake  asic.icns  cdoc.icns
client/mac/Resources/: Icon.icns  asic.icns  bdoc.icns  cdoc.icns  ddoc.icns  p12d.icns
client/mac/Resources/en.lproj/: InfoPlist.strings
client/mac/Resources/et.lproj/: InfoPlist.strings  ServicesMenu.strings
client/mac/Resources/ru.lproj/: InfoPlist.strings  ServicesMenu.strings
client/mac/en.lproj/: InfoPlist.strings
client/mac/et.lproj/: ServicesMenu.strings
client/mac/ru.lproj/: ServicesMenu.strings
client/qrcodegen/: qrcodegen.h
client/translations/: en.ts  et.ts  ru.ts  tr.qrc
client/util/: CertUtil.cpp  CertUtil.h  CertUtil_mac.mm  FileUtil.cpp  FileUtil.h  MacUtil.h  MacUtil.mm
client/widgets/: Accordion.cpp  Accordion.h  Accordion.ui  AccordionTitle.cpp  AccordionTitle.h  AccordionTitle.ui  AddressItem.cpp  AddressItem.h  AddressItem.ui  ButtonLabel.cpp  ButtonLabel.h  CardInfo.cpp  CardInfo.h  CardInfo.ui  CardPopup.cpp  CardPopup.h  CardWidget.cpp  CardWidget.h  CardWidget.ui  CheckBox.cpp  CheckBox.h  ComboBox.cpp  ComboBox.h  ContainerItem.cpp  ContainerItem.h  ContainerPage.cpp  ContainerPage.h  ContainerPage.ui  DropdownButton.cpp  DropdownButton.h  FadeInNotification.cpp  FadeInNotification.h  FileItem.cpp  FileItem.h  FileItem.ui  FileList.cpp  FileList.h  IDSelector.cpp  IDSelector.h  InfoStack.cpp  (+51 more)
cmake/: sbom.cmake
cmake/modules/: FindLDAP.cmake
crypto/: CryptoDoc.cpp  CryptoDoc.h
debian/: changelog  control  copyright
extensions/DigiDocQL/: CMakeLists.txt  DigiDocQL.entitlements  GeneratePreviewForURL.mm  GenerateThumbnailForURL.c  Info.plist  Info.plist.cmake  PreviewViewController.mm  main.c
extensions/kde/: CMakeLists.txt  qdigidoc-signer.desktop
extensions/nautilus/: CMakeLists.txt  nautilus-qdigidoc.py
extensions/nautilus/po/: et.po  nautilus-qdigidoc.pot  ru.po  update-po.sh
extensions/windows/: CMakeLists.txt  EsteidShellExtension.cpp  EsteidShellExtension.def  EsteidShellExtension.idl  EsteidShellExtension.rc  EsteidShellExtension.rgs  EsteidShellExtension.wxs  EsteidShellExtensionV2.cpp  EsteidShlExt.cpp  EsteidShlExt.h  EsteidShlExt_x64.rgs  EsteidShlExt_x86.rgs  dllmain.cpp  dllmain.h  resource.h  stdafx.cpp  stdafx.h  targetver.h
patches/: qt-5.9.1-xcode-9.patch  qt-5.9.5.patch
schema/: header.fbs  recipients.fbs
